Ask before demo mode after change

When starting a demo, the game will be restarted and there is no
question, whether it should be saved. Now if the game changed,
the user gets the opportunity to save the game before demo or
a game restart.

BUG: 373245